# deepwiki-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  examples.py  pyproject.toml  requirements.txt  server.py  setup.bat  setup.sh
